  * Permit spaces in the gradient color specification (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25614).
  * Fix IdentifyImage() crash when image->magick member is null (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25615).

2014-05-12  6.8.9-2 Dirk Lemstra <dirk@snakeware...>
  * Added support for writing RLE compressed TGA files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=12335).
  * Bump major Magick++ library version.

2014-05-09  6.8.9-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-1, SVN revision 15697.

2014-04-22  6.8.9-1 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed bug with the PNG00 subformat when the original format was PNG32.
  * The "-strip" option now only removes profiles and comments from PNG
    output.  Previously the background, density, and other metadata were
    also discarded.

2014-04-22  6.8.9-1 Cristy  <quetzlzacatenango@image...>
  * Support new -hough-lines option.
  * Support new -mean-shift option.
  * identify -units without argument no longer faults (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25542).
  * Require OpenJP2 version 2.1.0 (opj_stream_set_user_data() method signature
    change between 2.0.0 and 2.1.0).

2014-04-20  6.8.9-1 Dirk Lemstra <dirk@snakeware...>
  * Added image moments, canny edge and hough line to Magick++.
  * The 8bim profile will be updated when the icc/iptc/xmp profile is changed.
  * Fix for stack overflow in DestroyXMLTree in Windows (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25457).
  * Added new coder for VIPS image format (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=25445).
  * Moved detection of type to a separate method in Magick++. The type() method
    no longer modifies the type of the image. Use determineType() instead.