@@ -10,9 +10,11 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25615).
 
 2014-05-12  6.8.9-2 Dirk Lemstra <dirk@snakeware...>
+  * Bump major Magick++ library version.
   * Added support for writing RLE compressed TGA files (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=12335).
-  * Bump major Magick++ library version.
+  * Improved performance of parsing the xmp profile (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25612).
 
 2014-05-09  6.8.9-1 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.9-1, SVN revision 15697.
